feat(backend): fetch categories and tags

--- a/scripts/test.ipynb
+++ b/scripts/test.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -89,6 +89,7 @@
     "    'priority': 10,\n",
     "    'status': 'DONE',\n",
     "    'category_id': 1,\n",
+    "    'kind': 0,\n",
     "}\n",
     "\n",
     "r = requests.post('http://127.0.0.1:8000/update/update-common-task', json=update_common_task_json)"
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -126,6 +127,7 @@
     "    'priority': 10,\n",
     "    'status': '在做了在做了',\n",
     "    'category_id': 1,\n",
+    "    'kind': 0\n",
     "}\n",
     "\n",
     "r = requests.post('http://127.0.0.1:8000/update/update-common-task', json=update_common_task_json)"
@@ -133,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
