feat(backend): reponse with error message

--- a/scripts/test.ipynb
+++ b/scripts/test.ipynb
@@ -158,10 +158,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Task ID not found in tbl_duration_task\n"
+     ]
+    }
+   ],
+   "source": [
+    "to_duration_task_json = {\n",
+    "    'id': 114514,\n",
+    "    'start_time': '2019-01-01T23:00:00Z',\n",
+    "    'end_time': '2019-01-05T23:59:59Z',\n",
+    "}\n",
+    "\n",
+    "r = requests.post('http://127.0.0.1:8000/update/update-duration-task', json=to_duration_task_json)\n",
+    "\n",
+    "print(r.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invalid task kind when inserting into tbl_task\n"
+     ]
+    }
+   ],
+   "source": [
+    "common_task_data = {\n",
+    "    'id': 0,\n",
+    "    'title': \"BAD\",\n",
+    "    'description': \"a task with invalid kind\",\n",
+    "    'deadline': \"2023-5-14T23:11:35Z\",\n",
+    "    'status': \"DOING\",\n",
+    "    'category_id': None,\n",
+    "    'kind': 3,\n",
+    "}\n",
+    "r = requests.post(url=f'http://127.0.0.1:8000/create/common-task', json=common_task_data)\n",
+    "print(r.text)\n"
+   ]
   }
  ],
  "metadata": {
