feat(backend): check task conversion

--- a/scripts/test.ipynb
+++ b/scripts/test.ipynb
@@ -207,6 +207,30 @@
     "r = requests.post(url=f'http://127.0.0.1:8000/create/common-task', json=common_task_data)\n",
     "print(r.text)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Task is already a reminder task\n"
+     ]
+    }
+   ],
+   "source": [
+    "to_duration_task_json = {\n",
+    "    'id': 1,\n",
+    "    'remind_time': '2019-01-01T23:00:00Z',\n",
+    "}\n",
+    "\n",
+    "r = requests.post('http://127.0.0.1:8000/update/to-reminder-task', json=to_duration_task_json)\n",
+    "\n",
+    "print(r.text)"
+   ]
   }
  ],
  "metadata": {
