refactor(backend): use rocket figment for url

--- a/scripts/test.ipynb
+++ b/scripts/test.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -210,24 +210,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Task is already a reminder task\n"
+      "Task is already a duration task\n"
      ]
     }
    ],
    "source": [
     "to_duration_task_json = {\n",
-    "    'id': 1,\n",
-    "    'remind_time': '2019-01-01T23:00:00Z',\n",
+    "    'id': 8,\n",
+    "    'start_time': '2019-01-01T23:00:00Z',\n",
+    "    'end_time': '2019-01-02T23:00:00Z',\n",
     "}\n",
     "\n",
-    "r = requests.post('http://127.0.0.1:8000/update/to-reminder-task', json=to_duration_task_json)\n",
+    "r = requests.post('http://127.0.0.1:8000/update/to-duration-task', json=to_duration_task_json)\n",
     "\n",
     "print(r.text)"
    ]
